fix spacing in js

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -5,3 +5,7 @@
 #read-links {
   text-decoration: line-through;
 }
+
+h1 {
+  background-color: aquamarine;
+}
